--- a/index.html
+++ b/index.html
@@ -1,24 +1,26 @@
 <!DOCTYPE html>
-<html ng-app="TMDB">
+<html>
 <head>
-   <!-- <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" /> -->
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-    <script src="js/angular.filter.min.js"></script>
     <script src="js/angular.min.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
+    <meta charset="utf-8"/>
+    <link rel="stylesheet" href="style.css">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
 </head>
-<body ng-cloak>
-    <div data-ng-controller="mainController as main">
-        <div class ="row" ng-repeat="result in data.results track by $index">
-                <a data-toggle="modal" href="#myModal">
-                    <figure id="{{result.id}}" ng-click="movData(result.id)">
-                            <img class="img-thumbnail" ng-src="https://image.tmdb.org/t/p/w300_and_h450_bestv2/{{result.poster_path}}" alt="NA"/>
-                            {{result.title}}
-                    </figure>
+<body ng-app="TMDB" ng-cloak>
+<div ng-controller="mainController" class="container">
+        <span class="col-md-3" ng-repeat="result in data.results track by $index">
+                <a data-toggle="modal" href="#myModal" id="{{result.id}}" ng-click="movData(result.id)">
+                    <img class="img-thumbnail"
+                         ng-src="https://image.tmdb.org/t/p/w300_and_h450_bestv2/{{result.poster_path}}" alt="NA"
+                         onerror="this.onerror=null;this.src='img/NA.jpg';"/><br/>
+                    {{result.title}}
+                    <br/><br/>
                 </a>
-        </div>
+        </span>
         <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
             <div class="modal-dialog modal-lg" role="document">
                 <div class="modal-content">
@@ -48,7 +50,8 @@
                         </div>
                     </div>
                     <div class="modal-footer">
-                        <button type="button" class="btn btn-default" data-dismiss="modal" ng-click="clear()">Close</button>
+                        <button type="button" class="btn btn-default" data-dismiss="modal" ng-click="movie=[]">Close
+                        </button>
                     </div>
                 </div>
             </div>
