refined the grid i guess

--- a/index.html
+++ b/index.html
@@ -10,18 +10,17 @@
     <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width,initial-scale=1">
 </head>
-<body ng-app="TMDB" ng-cloak>
+<body ng-app="TMDB">
 <div ng-controller="mainController" class="container">
-        <span class="col-md-3" ng-repeat="result in data.results">
-                <a data-toggle="modal" href="#myModal" id="{{result.id}}" ng-click="movData(result.id)">
-                    <img class="img-thumbnail"
-                         ng-src="https://image.tmdb.org/t/p/w300_and_h450_bestv2/{{result.poster_path}}" alt="NA"
-                         onerror="this.onerror=null;this.src='img/NA.jpg';"/><br/>{{result.title}}<br/>
+    <div class="col-md-2" ng-repeat="result in data.results">
+        <a data-toggle="modal" href="#myModal" id="{{result.id}}" ng-click="movData(result.id)">
+            <img class="img-thumbnail" ng-src="https://image.tmdb.org/t/p/w300_and_h450_bestv2/{{result.poster_path}}"
+                 alt="NA" onerror="this.onerror=null;this.src='img/NA.jpg';"/><br/>{{result.title}}<br/>
                     <span id="fadey">{{result.release_date | date}}</span>
                     <br/><br/>
                 </a>
-        </span>
-        <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+    </div>
+    <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" ng-cloak>
             <div class="modal-dialog modal-lg" role="document">
                 <div class="modal-content">
                     <div class="modal-header">
@@ -32,7 +31,8 @@
                         <div class="container-fluid">
                             <div class="row">
                                 <div class="col-xs-6">
-                                    <img ng-src ="https://image.tmdb.org/t/p/w300_and_h450_bestv2/{{movie.poster_path}}" />
+                                    <img ng-src="https://image.tmdb.org/t/p/w300_and_h450_bestv2/{{movie.poster_path}}"
+                                         onerror="this.onerror=null;this.src='img/NA.jpg';"/>
                                 </div>
                                 <div class="col-xs-6">
                                     <b>{{movie.tagline}}</b><br /><br />
@@ -50,7 +50,7 @@
                         </div>
                     </div>
                     <div class="modal-footer">
-                        <button type="button" class="btn btn-default" data-dismiss="modal" ng-click="movie=[]">Close
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Close
                         </button>
                     </div>
                 </div>
